--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 
 .wrapper {
   min-height: 100vh;
-  overflow: hidden; //что б ничего не вылезло за экран
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   font-size: 16px;
@@ -24,12 +24,13 @@ display: flex;
   padding: 10px;
   cursor: pointer;
 
-
-  &:hover{
-    background-color: #1890ff ;
-    color: white;
-  }
 }
+.btn:hover{
+  background-color: #1890ff ;
+  color: white;
+}
+
+
 .logo{
   cursor: pointer;
 }
@@ -73,4 +74,10 @@ footer{
   background-color: white;
 
 
+}
+
+.center{
+
+  text-align: center;
+  margin-bottom: 10px;
 }
