--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 
 .wrapper {
   min-height: 100vh;
-  overflow: hidden;
+  /*overflow: hidden;*/
   display: flex;
   flex-direction: column;
   font-size: 16px;
@@ -56,8 +56,9 @@ display: flex;
   width: 200px;
 }
 .container{
+
 height: 100%;
-  width: 1200px;
+ max-width: 1200px;
   margin: 0 auto;
   align-items: center;
 }
@@ -80,4 +81,17 @@ footer{
 
   text-align: center;
   margin-bottom: 10px;
+}
+
+
+
+
+@media only screen and (max-width: 700px) {
+
+  .table-box{
+    overflow-x: scroll;
+  }
+
+
+
 }
