--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 
-
+@import "./font/stylesheet.css";
 
 
 .wrapper {
@@ -58,7 +58,7 @@ display: flex;
 .container{
 
 height: 100%;
- max-width: 1200px;
+ /*max-width: 1200px;*/
   margin: 0 auto;
   align-items: center;
 }
@@ -82,6 +82,24 @@ footer{
   text-align: center;
   margin-bottom: 10px;
 }
+
+.ant-table-tbody > tr > td > .ant-table-wrapper:only-child .ant-table{
+  margin: -16px -16px -16px 0;
+}
+
+
+
+.minitable td{
+  padding: 3px;
+  border: 1px solid rgba(0, 0, 0, 0.06);;
+}
+
+.title{
+  font-size: 20px;
+  font-family: "HACKED", serif;
+}
+
+
 
 
 
